--- a/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.scss
+++ b/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.scss
@@ -170,6 +170,22 @@ ul {
   }
 }
 
+nz-col {
+  margin-bottom: 20px;
+}
+
+.saveBtn {
+  margin-left: 10px;
+}
+
+.orange {
+  color: $cds_color_orange;
+}
+
+nz-col.center {
+  text-align: center;
+}
+
 .mb130 {
   margin-bottom: 130px;
 }
