--- a/ui/src/app/views/pipeline/show/pipeline.show.html
+++ b/ui/src/app/views/pipeline/show/pipeline.show.html
@@ -1,6 +1,7 @@
+<div id="PipelineShow">
 <div *ngIf="project && pipeline;then showPipeline; else loadPipeline"></div>
 <ng-template #showPipeline>
-    <div id="PipelineShow">
+
         <app-project-breadcrumb [project]="project" [pipeline]="pipeline" [application]="application"
             [workflow]="workflowName" [version]="version" [buildNumber]="buildNumber" [envName]="envName"
             [remote]="remote" [branch]="branch">
@@ -18,14 +19,10 @@
                             <p>{{'pipeline_repository_help_line_1' | translate}}</p>
                             <p>{{'workflow_repository_help_line_2' | translate}}</p>
                             <div class="footer">
-                                <div>
-                                    <div class="ui list">
-                                        <a class="item" target="_blank" rel="noopener noreferrer"
-                                            href="#" [routerLink]="['/docs', 'tutorials', 'init_workflow_with_cdsctl']">
-                                            {{'common_read_more'| translate}}
-                                        </a>
-                                    </div>
-                                </div>
+                                <a class="item" target="_blank" rel="noopener noreferrer"
+                                   href="#" [routerLink]="['/docs', 'tutorials', 'init_workflow_with_cdsctl']">
+                                    Read more
+                                </a>
                             </div>
                         </ng-container>
                     </div>
@@ -74,12 +71,12 @@
                 </div>
             </div>
         </div>
-    </div>
     <section class="content-wrap" *ngIf="pipeline != null">
         <app-pipeline-ascode-editor [project]="project" [pipeline]="pipeline" [open]="asCodeEditorOpen">
         </app-pipeline-ascode-editor>
     </section>
 </ng-template>
 <ng-template #loadPipeline>
-    <div class="ui text active loader">Loading pipeline...</div>
+    <nz-spin nzTip="Loading pipeline..."></nz-spin>
 </ng-template>
+</div>
