--- a/ui/src/app/views/pipeline/show/ascode-editor/pipeline.ascode.editor.scss
+++ b/ui/src/app/views/pipeline/show/ascode-editor/pipeline.ascode.editor.scss
@@ -1,12 +1,26 @@
 .codebar {
     z-index: 10; // to be over code mirror fields of action component
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: auto;
+    width: 0;
     &.visible {
         width: 50%;
     }
     margin-top: 100px !important;
     overflow-y: auto;
+    height: 87%;
 
-    .transparent {
+    nz-spin {
+      margin-top: 30px;
+      position: absolute;
+      padding: 30px 50% 0 50%;
+    }
+
+
+
+  .transparent {
         background-color: transparent;
     }
 
@@ -14,21 +28,19 @@
         height: 87%;
     }
 
-    .mt5 {
-        margin-top: 5px;
-    }
-
     .bottomBtnsWrapper {
-        position: fixed;
-        bottom: 100px;
-        right: 0;
-        width: 430px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+      position: absolute;
+      right: 0;
+      width: 100%;
+      padding-top: 20px;
+      padding-bottom: 20px;
 
-        .column {
-            padding-top: 5px;
-            padding-bottom: 5px;
+      nz-row {
+        padding: 0 20px;
+        nz-col {
+          padding-top: 5px;
+          padding-bottom: 5px;
         }
+      }
     }
 }
