--- a/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
+++ b/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
@@ -67,7 +67,7 @@
                                         <nz-form-label>Name</nz-form-label>
                                         <nz-form-control>
                                             <input nz-input type="text" name="name"
-                                                   [(ngModel)]="newConsumer.service_name">
+                                                   [(ngModel)]="newConsumer.auth_consumer_user.service_name">
                                         </nz-form-control>
                                     </nz-form-item>
                                 </nz-col>
@@ -77,7 +77,7 @@
                                         <nz-form-label>Type</nz-form-label>
                                         <nz-form-control>
                                             <input nz-input type="text" name="type"
-                                                   [(ngModel)]="newConsumer.service_type">
+                                                   [(ngModel)]="newConsumer.auth_consumer_user.service_type">
                                         </nz-form-control>
                                     </nz-form-item>
                                 </nz-col>
@@ -87,8 +87,8 @@
                                         <nz-form-label>Region</nz-form-label>
                                         <nz-form-control>
                                             <input nz-input type="text" name="region"
-                                                   [(ngModel)]="newConsumer.service_region">
-                                            <label nz-checkbox name="ignore" [(ngModel)]="newConsumer.service_ignore_job_with_no_region">
+                                                   [(ngModel)]="newConsumer.auth_consumer_user.service_region">
+                                            <label nz-checkbox name="ignore" [(ngModel)]="newConsumer.auth_consumer_user.service_ignore_job_with_no_region">
                                                 Ignore job with no region
                                             </label>
                                         </nz-form-control>
