--- a/ui/src/app/views/workflow/sidebar/code/sidebar.code.html
+++ b/ui/src/app/views/workflow/sidebar/code/sidebar.code.html
@@ -1,13 +1,10 @@
 <div class="sidebar codebar" [ngClass]="{'visible': open}">
-    <nz-row class="fullheight">
-        <nz-col [nzSpan]="24">
-            <codemirror
-                    [(ngModel)]="exportedWf"
+    <div class="fullheight">
+        <codemirror [(ngModel)]="exportedWf"
                     (keydown)="updated = true; keyEvent($event)"
                     [config]="codeMirrorConfig" #codeMirror>
             </codemirror>
-        </nz-col>
-    </nz-row>
+    </div>
     <div class="nzSegment bottomBtnsWrapper" *ngIf="open">
         <nz-row>
             <nz-col [nzSpan]="24">
