--- a/ui/src/app/views/workflow/sidebar/code/sidebar.code.scss
+++ b/ui/src/app/views/workflow/sidebar/code/sidebar.code.scss
@@ -18,7 +18,7 @@
     }
 
     .fullheight {
-        height: 87%;
+      height: 87%;
       width: 100%;
     }
 
@@ -29,7 +29,7 @@
   .bottomBtnsWrapper {
     position: absolute;
     right: 0;
-    width: 100%;
+    width: 440px;
     padding-top: 20px;
     padding-bottom: 20px;
 
